--- a/frontend/src/Components/Project.css
+++ b/frontend/src/Components/Project.css
@@ -15,10 +15,11 @@
           align-items: center;
           margin-bottom: 30px;
           padding-bottom: 20px;
-          border-bottom: 2px solid #000000;
-          margin-top:90px;
+          border-bottom: 0.1px solid grey;
+          margin-top:80px;
            scrollbar-width: none;        /* Firefox */
   -ms-overflow-style: none;  
+  
         }
   .button2{
     color:white;
@@ -28,7 +29,8 @@
     padding-right:30px;
     border-radius: 20px;
     position:relative;
-    margin-top:10px;
+    left:10px;
+    margin-top:25px;
   }
   .button3{
     color:white;
@@ -206,6 +208,7 @@
 
 /* ===== FULLSCREEN MODAL ===== */
     .fullscreen-modal {
+      max-width: 1800px;
             margin-top:80px;
           position: fixed;
           top: 0;
@@ -218,6 +221,8 @@
 
            -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;     /* Firefox */
+    margin-left:-53px;
+    margin-right:-60px;
 
         }
    
