--- a/frontend/src/ComponentsCSS/blogeditor.css
+++ b/frontend/src/ComponentsCSS/blogeditor.css
@@ -169,6 +169,9 @@
   border-radius: 12px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
   margin-bottom: 2rem;
+  margin-left:-15px;
+  margin-right:-15px;
+  max-width: 1800px;
 }
 
 .form-group {
@@ -967,5 +970,17 @@
   border-radius: 10px;;
 }
 .btn3:hover{
+  cursor:pointer;
+}
+.btn-back{
+    color:  white;
+    background-color:  black;
+    padding:7px;
+    padding-left:15px;
+    padding-right:15px;
+    border-radius: 30px;
+
+}
+.btn-back:hover{
   cursor:pointer;
 }
